# yxdb-py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/yxdb/: _buffered_record_reader.py  _extractors.py  _lzf.py  _metainfo_field.py  _utility.py  _yxdb_record.py  lzf.py  spatial.py  yxdb_field.py  yxdb_reader.py
tests/: test_buffered_record_reader.py  test_extractors.py  test_lzf.py  test_spatial_readers.py  test_yxdb_reader.py  test_yxdb_record.py
tests/test_files/: AllNormalFields.yxdb  LotsOfRecords.yxdb  TestNewYxdb.yxdb  TutorialData.yxdb  VeryLongField.yxdb  invalid.txt  invalidSmall.txt  line.yxdb  multi-line.yxdb  multi-point.yxdb  multi-poly-holes.yxdb  multi-poly.yxdb  null-spatial.yxdb  point.yxdb  poly.yxdb
