[project]
name = "yxdb"
version = "0.0.4"
authors = [
  { name="tlarsendataguy", email="tom@tlarsendataguy.com" },
]
description = "Reads Alteryx data files into Python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tlarsendataguy-yxdb/yxdb-py"
"Bug Tracker" = "https://github.com/tlarsendataguy-yxdb/yxdb-py/issues"